tests/src/frontend/syntax/invalid/pattern_multi_binds_non_overlapping_names_params.sk
base class C {
  children =
  | A{x: Int}
  | B{y: Int}
}

fun shouldFail(): String {
  (A{x => true} : C) match {
  | A{x => t}
  | B{y => x} ->
    "Fail\n"
  }
}
